View source mode has extra space at EOL. If you select the source and copy+paste, the result is different from the original. Also the last line is empty when there is a "\n" right before EOF. It should show a line, just as an text editor would.
Created attachment 99075 [details] patch
Chromium bug is http://code.google.com/p/chromium/issues/detail?id=87726
Comment on attachment 99075 [details] patch Attachment 99075 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/8959189 New failing tests: fast/frames/viewsource-linebreak.html
Created attachment 99078 [details] Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Comment on attachment 99075 [details] patch Thank you fix this bug. It's really annoying. If you upload a new patch that passes the tests, I'll be happy to review.
Created attachment 99200 [details] fixed patch
(In reply to comment #6) > Created an attachment (id=99200) [details] > fixed patch In the previous patch, I must have changed my test after generating the expected results.
Comment on attachment 99200 [details] fixed patch View in context: https://bugs.webkit.org/attachment.cgi?id=99200&action=review > Source/WebCore/html/HTMLViewSourceDocument.cpp:115 > + addLine(""); Maybe String() to avoid an allocation?
Created attachment 99214 [details] used String()
The commit-queue encountered the following flaky tests while processing attachment 99214 [details]: fast/flexbox/box-orient-button.html bug 63682 (author: hamaji@chromium.org) The commit-queue is continuing to process your patch.
Comment on attachment 99214 [details] used String() Clearing flags on attachment: 99214 Committed r90082: <http://trac.webkit.org/changeset/90082>
All reviewed patches have been landed. Closing bug.