2011-06-29  Keishi Hattori  <keishi@webkit.org>

Reviewed by Adam Barth.

        Remove extra space at EOL in view source mode
        https://bugs.webkit.org/show_bug.cgi?id=63620

        * fast/frames/resources/viewsource-frame-5.html: Added.
        * fast/frames/viewsource-empty-attribute-value-expected.txt: Regenerated.
        * fast/frames/viewsource-linebreak-expected.txt: Added.
        * fast/frames/viewsource-linebreak.html: Added. Test that there are no extra spaces at EOL.
        And that the multiple consecutive line breaks are maintained in the frame.
2011-06-29  Keishi Hattori  <keishi@webkit.org>

        Reviewed by Adam Barth.

        Remove extra space at EOL in view source mode
        https://bugs.webkit.org/show_bug.cgi?id=63620

        Test: fast/frames/viewsource-linebreak.html

        * css/view-source.css:
        (tbody:last-child .webkit-line-content:empty:before): If we don't do this
        the last line will be empty and the height will be shorter than the rest.
        * html/HTMLViewSourceDocument.cpp:
        (WebCore::HTMLViewSourceDocument::addSource): If source file is empty, add an empty line.
        (WebCore::HTMLViewSourceDocument::finishLine): Call when you are done with the current line.
        Adds a BR element if the line is empty and sets current to tbody.
        (WebCore::HTMLViewSourceDocument::addText):
        * html/HTMLViewSourceDocument.h:

Canonical link: https://commits.webkit.org/79363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90082 268f45cc-cd09-0410-ab3c-d52691b4dbfc